Added empty js files.

--- a/tag-assignment-wrapper.html
+++ b/tag-assignment-wrapper.html
@@ -7,6 +7,9 @@
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width">
 		<link rel="stylesheet" href="styles.css">
+		<script src="js/tag-filter.js"></script>
+		<script src="js/fs-wrapper.js"></script>
+		<script src="js/yelp-wrapper.js"></script>
 		<script src="js/mustache.js"></script>
 		<script src="js/jquery_1.8.2.min.js"></script>
 		<script type="text/javascript">
