--- a/yourtags.html
+++ b/yourtags.html
@@ -1,1 +1,17 @@
-yourtags.html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<link href="css/bootstrap.css" rel="stylesheet" />
+	<link href="css/bootstrap-responsive.css" rel="stylesheet" />
+	<link href="css/style.css?a1" rel="stylesheet" />
+	
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+	<script src="scripts/jquery.placeholder.min.js" type="text/javascript"></script>
+	<script src="scripts/bootstrap.min.js" type="text/javascript"></script>
+</head>
+<body>
+	<div class="wrapper">
+
+	</div>
+<body>
+</html>
