--- a/yourtags.html
+++ b/yourtags.html
@@ -1,17 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<link href="css/bootstrap.css" rel="stylesheet" />
-	<link href="css/bootstrap-responsive.css" rel="stylesheet" />
-	<link href="css/style.css?a1" rel="stylesheet" />
+	<link href="bootstrap/css/bootstrap.css" rel="stylesheet" />
+	<link href="bootstrap/css/bootstrap-responsive.css" rel="stylesheet" />
+	<link href="bootstrap/css/style.css?a1" rel="stylesheet" />
 	
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 	<script src="scripts/jquery.placeholder.min.js" type="text/javascript"></script>
 	<script src="scripts/bootstrap.min.js" type="text/javascript"></script>
 </head>
 <body>
-	<div class="wrapper">
-
+	<div class="container-fluid">
+		<div class="row-fluid">
+			<div class="span2"> 
+				<!-- Sidebar for tags -->
+				<h2> Tag List </h2>
+			</div>
+			<div class="span10">
+				<!-- Main content for businesses go here -->
+				<form class="form-search">
+  					<input type="text" class="input-medium search-query">
+  					<button type="submit" class="btn">Search</button>
+				</form>
+			</div>
+		</div>
 	</div>
 <body>
 </html>
