--- a/yourtags.html
+++ b/yourtags.html
@@ -10,18 +10,70 @@
 	<script src="scripts/bootstrap.min.js" type="text/javascript"></script>
 </head>
 <body>
-	<div class="container-fluid">
+	<div class="container">
+		<div class="span12 page-header"> 
+			<h1> Your Tags </h1>
+		</div>
 		<div class="row-fluid">
 			<div class="span2"> 
 				<!-- Sidebar for tags -->
 				<h2> Tag List </h2>
+				<button type="submit" class="btn btn-info">Tag Name (x)</button>
+				<button type="submit" class="btn btn-info">Tag Name (x)</button>
+				<button type="submit" class="btn btn-info">Tag Name (x)</button>
+				<button type="submit" class="btn btn-info">Tag Name (x)</button>
+				<button type="submit" class="btn btn-info">Tag Name (x)</button>
+				<button type="submit" class="btn btn-info">Tag Name (x)</button>
+				<button type="submit" class="btn btn-info">Tag Name (x)</button>
+				<button type="submit" class="btn btn-info">Tag Name (x)</button>
+				<button type="submit" class="btn btn-info">Tag Name (x)</button>
 			</div>
 			<div class="span10">
-				<!-- Main content for businesses go here -->
-				<form class="form-search">
-  					<input type="text" class="input-medium search-query">
-  					<button type="submit" class="btn">Search</button>
-				</form>
+				<!-- Main content for filtered businesses go here -->
+				<div>
+					<form class="form-search">
+	  					<button type="submit" class="btn btn-warning">Filter by</button>
+	  					<input type="text" class="input-large search-query span8">
+					</form>
+				</div>
+				<div>
+					<hr>
+						<h3> Filtered Results </h3>
+						<div class="well"> 
+							<div class="span3">
+								<h1> Joe's Pizza </h1>
+							</div>
+							<div class="span6">
+								<button type="submit" class="btn btn-info">Tag Name (x)</button>
+								<button type="submit" class="btn btn-info">Tag Name (x)</button>
+								<button type="submit" class="btn btn-info">Tag Name (x)</button>
+								<button type="submit" class="btn btn-info">Tag Name (x)</button>
+							</div>
+						</div>
+						<div class="well"> 
+							<div class="span3">
+								<h1> Chinese Place </h1>
+							</div>
+							<div class="span6">
+								<button type="submit" class="btn btn-info">Tag Name (x)</button>
+								<button type="submit" class="btn btn-info">Tag Name (x)</button>
+								<button type="submit" class="btn btn-info">Tag Name (x)</button>
+								<button type="submit" class="btn btn-info">Tag Name (x)</button>
+							</div>
+						</div>
+						<div class="well"> 
+							<div class="span3">
+								<h1> Hillstone </h1>
+							</div>
+							<div class="span6">
+								<button type="submit" class="btn btn-info">Tag Name (x)</button>
+								<button type="submit" class="btn btn-info">Tag Name (x)</button>
+								<button type="submit" class="btn btn-info">Tag Name (x)</button>
+								<button type="submit" class="btn btn-info">Tag Name (x)</button>
+							</div>
+						</div>
+					</hr>
+				</div>
 			</div>
 		</div>
 	</div>
