--- a/yourtags.html
+++ b/yourtags.html
@@ -39,33 +39,34 @@
 				<div>
 					<hr>
 						<h3> Filtered Results </h3>
-						<div class="well"> 
-							<div class="span3">
-								<h1> Joe's Pizza </h1>
+						<div class="well clearfix"> 
+							<div class="span5 pull-left">
+								<h3> Joe's Pizza </h3>
 							</div>
-							<div class="span6">
+							<div class="span5 pull-right">
+								<button type="submit" class="btn btn-info">Tag Name (x)</button>
+								<button type="submit" class="btn btn-info">Tag Name (x)</button>
+								<button type="submit" class="btn btn-info">Tag Name (x)</button>
+								<button type="submit" class="btn btn-info">Tag Name (x)</button>
+							</div>
+							<div class="clear-fix"> </div>
+						</div>
+						<div class="well clearfix"> 
+							<div class="span3">
+								<h3> Chinese Place </h3>
+							</div>
+							<div class="span5 pull-right">
 								<button type="submit" class="btn btn-info">Tag Name (x)</button>
 								<button type="submit" class="btn btn-info">Tag Name (x)</button>
 								<button type="submit" class="btn btn-info">Tag Name (x)</button>
 								<button type="submit" class="btn btn-info">Tag Name (x)</button>
 							</div>
 						</div>
-						<div class="well"> 
+						<div class="well clearfix"> 
 							<div class="span3">
-								<h1> Chinese Place </h1>
+								<h3> Hillstone </h3>
 							</div>
-							<div class="span6">
-								<button type="submit" class="btn btn-info">Tag Name (x)</button>
-								<button type="submit" class="btn btn-info">Tag Name (x)</button>
-								<button type="submit" class="btn btn-info">Tag Name (x)</button>
-								<button type="submit" class="btn btn-info">Tag Name (x)</button>
-							</div>
-						</div>
-						<div class="well"> 
-							<div class="span3">
-								<h1> Hillstone </h1>
-							</div>
-							<div class="span6">
+							<div class="span5 pull-right">
 								<button type="submit" class="btn btn-info">Tag Name (x)</button>
 								<button type="submit" class="btn btn-info">Tag Name (x)</button>
 								<button type="submit" class="btn btn-info">Tag Name (x)</button>
