--- a/yourtags.html
+++ b/yourtags.html
@@ -3,47 +3,106 @@
 <head>
 	<link href="bootstrap/css/bootstrap.css" rel="stylesheet" />
 	<link href="bootstrap/css/bootstrap-responsive.css" rel="stylesheet" />
+	<link href="styles.css" rel="stylesheet" />
 	<link href="bootstrap/css/style.css?a1" rel="stylesheet" />
+	
 	
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 	<script src="scripts/jquery.placeholder.min.js" type="text/javascript"></script>
 	<script src="scripts/bootstrap.min.js" type="text/javascript"></script>
+	<script src="js/tag-filter.js"></script>
+		<script src="js/fs-wrapper.js"></script>
+		<script src="js/yelp-wrapper.js"></script>
+		<script src="js/mustache.js"></script>
+		<script src="js/jquery_1.8.2.min.js"></script>
+		<script type="text/javascript">
+
+			function addTag(e) {
+				var $e = $(e);
+				
+				$e.unbind('click');
+
+				$e.remove();
+				$e.appendTo($('#chosen-tags'));
+				$remove = $e.find($('.tag-remove'));
+				$remove.css('display', 'inline');
+
+				$e.removeClass('tag-clickable clear-both');
+			}
+		</script>
 </head>
 <body>
 	<div class="container">
-		<div class="span12 page-header"> 
-			<h1> Your Tags </h1>
+		<div>
+		    <ul class="nav nav-tabs">
+				<li class="active">
+			    	<a href="search-results.html">Home</a>
+			  	</li>
+			 	<li>
+		      		<a href="tag-assignment-wrapper.html">Your Tags</a>
+		    	</li>
+			  	<li>
+			  		<a href="#">...</a>
+			  	</li>
+		  	</ul>
+		</div>
+		<div class="span11" style="text-align: center;"> 
+			<h1 style="color: red;"> Your Tags </h1>
 		</div>
 		<div class="row-fluid">
-			<div class="span2"> 
+			<div id ="existing-tags" class="well well-small span2">
 				<!-- Sidebar for tags -->
 				<h2> Tag List </h2>
-				<button type="submit" class="btn btn-info">Tag Name (x)</button>
-				<button type="submit" class="btn btn-info">Tag Name (x)</button>
-				<button type="submit" class="btn btn-info">Tag Name (x)</button>
-				<button type="submit" class="btn btn-info">Tag Name (x)</button>
-				<button type="submit" class="btn btn-info">Tag Name (x)</button>
-				<button type="submit" class="btn btn-info">Tag Name (x)</button>
-				<button type="submit" class="btn btn-info">Tag Name (x)</button>
-				<button type="submit" class="btn btn-info">Tag Name (x)</button>
-				<button type="submit" class="btn btn-info">Tag Name (x)</button>
+					<span class="tag tag-clickable clear-both pull-left" onclick="addTag(this);"> Japanese
+						<span class="tag-remove" style="display:none;">|
+						<a href="#" onclick="alert('Remove');return false;">X</a>
+						</span>
+					</span>
+					<span class="tag tag-clickable clear-both pull-left" onclick="addTag(this);"> Italian
+						<span class="tag-remove" style="display:none;">|
+						<a href="#" onclick="alert('Remove');return false;">X</a>
+						</span>
+					</span>
+					<span class="tag tag-clickable clear-both pull-left" onclick="addTag(this);"> Expensive
+						<span class="tag-remove" style="display:none;">|
+						<a href="#" onclick="alert('Remove');return false;">X</a>
+						</span>
+					</span>
+					<span class="tag tag-clickable clear-both pull-left" onclick="addTag(this);"> Cheap
+						<span class="tag-remove" style="display:none;">|
+						<a href="#" onclick="alert('Remove');return false;">X</a>
+						</span>
+					</span>
+					<span class="tag tag-clickable clear-both pull-left" onclick="addTag(this);"> Near Columbia
+						<span class="tag-remove" style="display:none;">|
+						<a href="#" onclick="alert('Remove');return false;">X</a>
+						</span>
+					</span>
+					<span class="tag tag-clickable clear-both pull-left" onclick="addTag(this);"> Pizza
+						<span class="tag-remove" style="display:none;">|
+						<a href="#" onclick="alert('Remove');return false;">X</a>
+						</span>
+					</span>
 			</div>
 			<div class="span10">
 				<!-- Main content for filtered businesses go here -->
-				<div>
-					<form class="form-search">
-	  					<button type="submit" class="btn btn-warning">Filter by</button>
-	  					<input type="text" class="input-large search-query span8">
-					</form>
+				<button type="submit" class="btn btn-warning pull-left">Filter by</button>
+	  			<div id="chosen-tags" class="span10 well well-small">
 				</div>
+	  			<form class="form-search">
+	  				<input type="text" class="input-large search-query span9">
+				</form>
 				<div>
 					<hr>
 						<h3> Filtered Results </h3>
-						<div class="well clearfix"> 
+						<div class="well well-small clearfix"> 
 							<div class="span5 pull-left">
 								<h3> Joe's Pizza </h3>
+								<p> Categories: Italian Pizza </p>
+								<p> Neighborhoods: Upper West Side </p>
 							</div>
 							<div class="span5 pull-right">
+								<p> Your Tags </p>
 								<button type="submit" class="btn btn-info">Tag Name (x)</button>
 								<button type="submit" class="btn btn-info">Tag Name (x)</button>
 								<button type="submit" class="btn btn-info">Tag Name (x)</button>
@@ -51,7 +110,7 @@
 							</div>
 							<div class="clear-fix"> </div>
 						</div>
-						<div class="well clearfix"> 
+						<div class="well well-small clearfix"> 
 							<div class="span3">
 								<h3> Chinese Place </h3>
 							</div>
@@ -62,7 +121,7 @@
 								<button type="submit" class="btn btn-info">Tag Name (x)</button>
 							</div>
 						</div>
-						<div class="well clearfix"> 
+						<div class="well well-small clearfix"> 
 							<div class="span3">
 								<h3> Hillstone </h3>
 							</div>
