--- a/yourtags.html
+++ b/yourtags.html
@@ -20,7 +20,7 @@
 			function addTag(e) {
 				var $e = $(e);
 
-				$e.off('click', 'addTag');
+				$e.attr('onclick', 'removeTag(this)');
 
 				$e.remove();
 				$e.appendTo($('#chosen-tags'));
@@ -32,17 +32,21 @@
 
 			function removeTag(e) {
 				var $e = $(e);
-				$e.remove();
+
+				$e.attr('onclick', 'addTag(this)');
+				$e.addClass('tag-clickable clear-both');
+
 				$e.appendTo($('#existing-tags'));
 				$remove = $e.find($('.tag-remove'));
 				$remove.css('display', 'none');
-
-				$e.addClass('tag-clickable clear-both');
-				$e.on('click', addTag);
 			}
+
+			function loadTags() {
+				$('<span class="tag tag-clickable clear-both pull-left" onclick="addTag(this);"> Japanese <span class="tag-remove" style="display:none"> | X </span></span>').appendTo('#existing-tags');
+				}
 		</script>
 </head>
-<body>
+<body onload="loadTags()">
 	<div class="container">
 		<div>
 		    <ul class="nav nav-tabs">
@@ -65,23 +69,13 @@
 				<!-- Sidebar for tags -->
 				<h2> Tag List </h2>
 				<p> Click on tag to filter by that tag </p>
-					<div id ="existing-tags">
-						<span class="tag tag-clickable clear-both pull-left" onclick="addTag(this);"> Japanese
-							<span class="tag-remove" onclick="removeTag($(this).parent('.tag'));" style="display:none;">|
-							<a href="#" onclick="alert('Remove');return false;">X</a>
-							</span>
-						</span>
+					<div id ="existing-tags" >
 					</div>
 			</div>
 			<div class="span10">
 				<!-- Main content for filtered businesses go here -->
 				<button type="submit" class="btn btn-warning pull-left">Filter by</button>
 	  			<div id="chosen-tags" class="span10 well well-small">
-	  				<span class="tag pull-left"> Pizza
-						<span class="tag-remove" onclick="removeTag($(this).parent('.tag'));" style="display:inline;">|
-						<a href="#" onclick="alert('Remove');return false;">X</a>
-						</span>
-					</span>
 				</div>
 	  			<form class="form-search">
 	  				<input type="text" class="input-large search-query span9">
