--- a/yourtags.html
+++ b/yourtags.html
@@ -49,6 +49,7 @@
 				$.get("data.txt",
 				   function(data){
 				   	var i = 0;
+				   	var $id = data.businesses[i].id;
 				   	var $name = data.businesses[i].name;
 				   	var $categories = data.businesses[i].categories;
 				   	var $display_phone = data.businesses[i].display_phone;
@@ -59,9 +60,29 @@
 				   	var $rating_img_url = data.businesses[i].rating_img_url;
 				   	var $review_count = data.businesses[i].review_count;
 				   	var $url = data.businesses[i].url;
-				     $('#results').append('<a href="' + $url + '"> <div class="well well-small clearfix result"> <div class="span3 pull-left"><h3>' + $name + '</h3> <p><b> Neighborhoods: </b>' + $neighborhoods + '</p><p><b> Categories: </b>' + $categories + '</div><div class="middle span3 pull-left"> <img src="' + $rating_img_url + '"> ' + $review_count + ' reviews <address>' + $display_phone + '<br>' + $address + '<br>' + $city + '</address></div><div class="span4 pull-left"><h4> Your Tags </h4></div></div></a>')
+				   	var $tags = data.businesses[i].tags;
+				     $('#results').append('<a href="' + $url + '"> <div id ="' + $id + '"class="well well-small clearfix result"> <div class="span3 pull-left"><h3>' + $name + '</h3> <p><b> Neighborhoods: </b>' + $neighborhoods + '</p><p class="categories"><b> Categories: </b></div><div class="middle span3 pull-left"> <img src="' + $rating_img_url + '"> ' + $review_count + ' reviews <address>' + $display_phone + '<br>' + $address + '<br>' + $city + '</address></div><div class="span4 pull-left biz-tags"><h4> Your Tags </h4></div></div></a>');
+
+				     processTags($tags, $id);
+				     processCategories($categories, $id);
 				   }, "json");
+					
+				function processTags(e, id) {
+				var $e = $(e);
+				jQuery.each($e, function(i, val){
+						$("#" + id + " div.biz-tags").append('<span id="' + val + '" class="tag pull-left">' + val + ' </span>');
+				});
+				}
+
+				function processCategories(e, id) {
+				var $e = $(e);
+				jQuery.each($e, function(i, val){
+						$("#" + id + " p.categories").append(val[0] + ", ");
+				});
+				}
 			}
+
+			
 		</script>
 </head>
 <body onload="loadTags()">
@@ -80,7 +101,7 @@
 		  	</ul>
 		</div>
 		<div class="span11" style="text-align: center;"> 
-			<h1 style="color: red;"> Your Tags </h1>
+			<h1 class="yelp-red"> Your Tags </h1>
 		</div>
 		<div class="row-fluid">
 			<div class="well well-small span2">
@@ -102,34 +123,8 @@
 							<hr>
 								<h3> Filtered Results </h3>
 								<div id="results">
-									<div class="well well-small clearfix">
 										<!-- Filtered Results Start Here -->
-										<div class="span5 pull-left">
-											<h3> Joe's Pizza </h3>
-											<p> Categories: Italian Pizza </p>
-											<p> Neighborhoods: Upper West Side </p>
-										</div>
-										<div class="span5 pull-right">
-											<p> Your Tags </p>
-											<button type="submit" class="btn btn-info">Tag Name (x)</button>
-											<button type="submit" class="btn btn-info">Tag Name (x)</button>
-											<button type="submit" class="btn btn-info">Tag Name (x)</button>
-											<button type="submit" class="btn btn-info">Tag Name (x)</button>
-										</div>
-										<div class="clear-fix"> </div>
-									</div>
 								</div>
-								<!-- <div class="well well-small clearfix"> 
-									<div class="span3">
-										<h3> Hillstone </h3>
-									</div>
-									<div class="span5 pull-right">
-										<button type="submit" class="btn btn-info">Tag Name (x)</button>
-										<button type="submit" class="btn btn-info">Tag Name (x)</button>
-										<button type="submit" class="btn btn-info">Tag Name (x)</button>
-										<button type="submit" class="btn btn-info">Tag Name (x)</button>
-									</div>
-								-->
 						</div>
 					</hr>
 				</div>
