Now call by searchAndDo('terms', 'zipcode', 'offset', function, <optional> 'catagory1,catagory2,etc');

--- a/YelpWrapperTest.html
+++ b/YelpWrapperTest.html
@@ -21,7 +21,10 @@
                 var out = prettyPrint(data);
                 $("body").append(out);
             };
-            searchAndDo('chinese', '06877', printer);
+            // var cata = [];
+            // cata.push("chinese");
+            // cata.push("japanese");
+            searchAndDo('', '06877', '0', printer, 'italian,pizza');
 
         </script>
     </head>
