--- a/yourtags.html
+++ b/yourtags.html
@@ -61,7 +61,8 @@
 				   	var $review_count = data.businesses[i].review_count;
 				   	var $url = data.businesses[i].url;
 				   	var $tags = data.businesses[i].tags;
-				     $('#results').append('<a href="' + $url + '"> <div id ="' + $id + '"class="well well-small clearfix result"> <div class="span3 pull-left"><h3>' + $name + '</h3> <p><b> Neighborhoods: </b>' + $neighborhoods + '</p><p class="categories"><b> Categories: </b></div><div class="middle span3 pull-left"> <img src="' + $rating_img_url + '"> ' + $review_count + ' reviews <address>' + $display_phone + '<br>' + $address + '<br>' + $city + '</address></div><div class="span4 pull-left biz-tags"><h4> Your Tags </h4></div></div></a>');
+				   	$("#results").empty();
+				    $('#results').append('<a href="' + $url + '"> <div id ="' + $id + '"class="well well-small clearfix result"> <div class="span3 pull-left"><h3>' + $name + '</h3> <p><b> Neighborhoods: </b>' + $neighborhoods + '</p><p class="categories"><b> Categories: </b></div><div class="middle span3 pull-left"> <img src="' + $rating_img_url + '"> ' + $review_count + ' reviews <address>' + $display_phone + '<br>' + $address + '<br>' + $city + '</address></div><div class="span4 pull-left biz-tags"><h4> Your Tags </h4></div></div></a>');
 
 				     processTags($tags, $id);
 				     processCategories($categories, $id);
@@ -104,7 +105,7 @@
 			<h1 class="yelp-red"> Your Tags </h1>
 		</div>
 		<div class="row-fluid">
-			<div class="well well-small span2">
+			<div id ="existing-tags-container" class="span2 well well-small">
 				<!-- Sidebar for tags -->
 				<h2> Tag List </h2>
 				<p> Click on tag to filter by that tag </p>
@@ -116,17 +117,16 @@
 				<button type="submit" class="btn btn-info pull-left" onclick="displayResults()">Display Results</button>
 	  			<div id="chosen-tags" class="span10 well well-small">
 				</div>
-	  			<form class="form-search">
+	  			<!-- <form class="form-search">
 	  				<input type="text" class="input-large search-query span9">
-				</form>
+				</form> -->
 						<div>
-							<hr>
-								<h3> Filtered Results </h3>
-								<div id="results">
-										<!-- Filtered Results Start Here -->
-								</div>
+							<h3> Filtered Results </h3>
+							<hr style="margin-top: 5px;">
+							<div id="results">
+									<!-- Filtered Results Start Here -->
+							</div>
 						</div>
-					</hr>
 				</div>
 			</div>
 		</div>
