--- a/yourtags.html
+++ b/yourtags.html
@@ -4,7 +4,8 @@
 	<link href="bootstrap/css/bootstrap.css" rel="stylesheet" />
 	<link href="bootstrap/css/bootstrap-responsive.css" rel="stylesheet" />
 	<link href="styles.css" rel="stylesheet" />
-	<link href="bootstrap/css/style.css?a1" rel="stylesheet" />
+	<!-- <link href="bootstrap/css/style.css?a1" rel="stylesheet" /> -->
+	<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     <script src="scripts/jquery.placeholder.min.js" type="text/javascript"></script>
     <script src="scripts/bootstrap.min.js" type="text/javascript"></script>
@@ -83,46 +84,42 @@
 		</script>
 </head>
 <body onload="loadTags()">
-	<div class="container">
-		<div>
-		    <ul class="nav nav-tabs">
-				<li class="active">
-			    	<a href="search-results.html">Home</a>
-			  	</li>
-			 	<li>
-		      		<a href="tag-assignment-wrapper.html">Your Tags</a>
-		    	</li>
-			  	<li>
-			  		<a href="#">...</a>
-			  	</li>
-		  	</ul>
-		</div>
-		<div class="span11" style="text-align: center;"> 
-			<h1 class="yelp-red"> Your Tags </h1>
-		</div>
-		<div class="row-fluid">
-			<div id ="existing-tags-container" class="span2 well well-small">
-				<!-- Sidebar for tags -->
-				<h2> Tag List </h2>
-				<p> Click on tag to filter by that tag </p>
-					<div id ="existing-tags" >
-					</div>
-			</div>
-			<div class="span10">
-				<!-- Main content for filtered businesses go here -->
-				<button type="submit" class="btn btn-info pull-left" onclick="displayResults()">Display Results</button>
-	  			<div id="chosen-tags" class="span10 well well-small">
-				</div>
-	  			<!-- <form class="form-search">
-	  				<input type="text" class="input-large search-query span9">
-				</form> -->
-						<div>
-							<h3> Filtered Results </h3>
-							<hr style="margin-top: 5px;">
-							<div id="results">
-									<!-- Filtered Results Start Here -->
-							</div>
+	<div id="body-wrapper">
+		<div class="container">
+			<!-- Navbar and Search Bar -->
+	        <div>
+	          <ul class="nav nav-tabs">
+	        	  <li>
+	        	    <a href="search-results.html">Home</a>
+	        	  </li>
+	        	  <li class="active">
+	              <a href="yourtags.html">Your Tags</a>
+	            </li>
+	          </ul>
+	        </div>
+			<div class="row-fluid">
+				<div id ="existing-tags-container" class="span2 well well-small">
+					<!-- Sidebar for tags -->
+					<h2> Tag List </h2>
+					<p> Click on tag to filter by that tag </p>
+						<div id ="existing-tags" >
 						</div>
+				</div>
+				<div class="span10">
+					<!-- Main content for filtered businesses go here -->
+					<button type="submit" class="btn btn-info pull-left" onclick="displayResults()"> Filter </button>
+		  			<div id="chosen-tags" class="span10 well well-small pull-left clear-right">
+					</div>
+		  			<!-- <form class="form-search">
+		  				<input type="text" class="input-large search-query span9">
+					</form> -->
+					<div>
+						<h3> Filtered Results </h3>
+						<hr style="margin-top: 5px;">
+						<div id="results">
+								<!-- Filtered Results Start Here -->
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
