--- a/search-results.html
+++ b/search-results.html
@@ -58,7 +58,7 @@
                 var $url = data.businesses[i].url;
                 var $tags = data.businesses[i].tags;
                 
-                $('#results').append('<div id ="' + $id + '"class="well well-small clearfix result"><div class="span2"><img class="thumbnail" src="' + $image_url + '"></div><div class="span4 pull-left"><a href="' + $url + '"><h4>' + $name + '</h4></a> <p><b> Neighborhoods: </b>' + $neighborhoods + '</p><p class="categories"><b> Categories: </b></div><div class="middle span3 pull-left"> <img src="' + $rating_img_url + '"> ' + $review_count + ' reviews <address>' + $display_phone + '<br>' + $address + '<br>' + $city + '</address></div><div class="span2 pull-right"><button class="pull-right btn btn-large btn-success"> Tag It! </button></div></div>');
+                $('#results').append('<div id ="' + $id + '"class="well well-small clearfix result"><div class="span2"><img class="thumbnail" src="' + $image_url + '"></div><div class="span4 pull-left"><a href="' + $url + '"><h4 class="yelp-red">' + $name + '</h4></a> <p><b> Neighborhoods: </b>' + $neighborhoods + '</p><p class="categories"><b> Categories: </b></div><div class="middle span3 pull-left"> <img src="' + $rating_img_url + '"> ' + $review_count + ' reviews <address>' + $display_phone + '<br>' + $address + '<br>' + $city + '</address></div><div class="span2 pull-right"><button class="pull-right btn btn-large btn-success"> Tag It! </button></div></div>');
 
                processTags($tags, $id);
                processCategories($categories, $id);
@@ -94,7 +94,7 @@
   <!--              <form class="form-search search-bar"> -->
                   <input type="text" id="query" class="input-large span6 search-query" placeholder="search for (e.g. Mexican, Joe's Pizza, cheap)">
                   <input type="text" id="zip" class="input-large span2 search-query" placeholder="Location">
-                  <button type="button" class="btn btn-primary pull-right" style="margin-left: 10px;" onclick="searchResults()">Search for places</button>
+                  <button type="button" class="btn btn-primary" onclick="searchResults()">Search for places</button>
   <!--              </form>
                 <button type="button" class="btn btn-primary pull-right" style="margin-left: 10px;" onclick="searchResults()">Search for places</button> -->
               </div>
