--- a/yourtags.html
+++ b/yourtags.html
@@ -68,25 +68,28 @@
 					getChosenTags();
 				$.get(file, 
 					function(data){
-				   	var i = 0;
-				   	var $id = data.businesses[i].id;
-				   	var $name = data.businesses[i].name;
-				   	var $categories = data.businesses[i].categories;
-				   	var $display_phone = data.businesses[i].display_phone;
-				   	var $image_url = data.businesses[i].image_url;
-				   	var $address = data.businesses[i].location.address;
-				   	var $city = data.businesses[i].location.city;
-				   	var $neighborhoods = data.businesses[i].location.neighborhoods;
-				   	if(typeof($neighborhoods) == 'undefined') $neighborhoods = '';
-				   	var $rating_img_url = data.businesses[i].rating_img_url;
-				   	var $review_count = data.businesses[i].review_count;
-				   	var $url = data.businesses[i].url;
-				   	var $tags = data.businesses[i].tags;
-				   	$("#results").empty();
-				    $('#results').append('<a href="' + $url + '"> <div id ="' + $id + '"class="well well-small clearfix result"><div class="span2"><img class="thumbnail" src="' + $image_url + '"></div> <div class="span3 pull-left"><h4 class="yelp-red">' + $name + '</h4> <p><b> Neighborhoods: </b>' + $neighborhoods + '</p><p class="categories"><b> Categories: </b></div><div class="middle span3 pull-left"> <img src="' + $rating_img_url + '"> ' + $review_count + ' reviews <address>' + $display_phone + '<br>' + $address + '<br>' + $city + '</address></div><div class="span4 pull-left biz-tags"><h4> Your Tags </h4></div></div></a>');
+					$("#results").empty();	
+					var $numResults = data.businesses.length;
+				   	for (i = 0; i < $numResults; i++) {
+					   	var $id = data.businesses[i].id;
+					   	var $name = data.businesses[i].name;
+					   	var $categories = data.businesses[i].categories;
+					   	var $display_phone = data.businesses[i].display_phone;
+					   	var $image_url = data.businesses[i].image_url;
+					   	var $address = data.businesses[i].location.address;
+					   	var $city = data.businesses[i].location.city;
+					   	var $neighborhoods = data.businesses[i].location.neighborhoods;
+					   	if(typeof($neighborhoods) == 'undefined') $neighborhoods = '';
+					   	var $rating_img_url = data.businesses[i].rating_img_url;
+					   	var $review_count = data.businesses[i].review_count;
+					   	var $url = data.businesses[i].url;
+					   	var $tags = data.businesses[i].tags;
 
-				     processTags($tags, $id);
-				     processCategories($categories, $id);
+					    $('#results').append('<a href="' + $url + '"> <div id ="' + $id + '"class="well well-small clearfix result"><div class="span2"><img class="thumbnail" src="' + $image_url + '"></div> <div class="span3 pull-left"><h4 class="yelp-red">' + $name + '</h4> <p><b> Neighborhoods: </b>' + $neighborhoods + '</p><p class="categories"><b> Categories: </b></div><div class="middle span3 pull-left"> <img src="' + $rating_img_url + '"> ' + $review_count + ' reviews <address>' + $display_phone + '<br>' + $address + '<br>' + $city + '</address></div><div class="span4 pull-left biz-tags"><h4> Your Tags </h4></div></div></a>');
+
+					     processTags($tags, $id);
+					     processCategories($categories, $id);
+				    }
 				   }, "json");
 					
 				function processTags(e, id) {
