--- a/fs-wrapper-tester.html
+++ b/fs-wrapper-tester.html
@@ -16,7 +16,7 @@
 		<script src="bootstrap/js/bootstrap.min.js"></script>
 		<script type="text/javascript">
 
-			var file = "1.txt";
+			var file = "1.txt";// Here...
 			function readFile() {
 				readFromFile(file, function(results) {
 					if(results) {
@@ -49,7 +49,64 @@
 					});
 				}
 			}
+
+			var test_data;
+			function getTagsForIdTest() {
+
+				var obj = test_data[0];
+				var $tags = $('#tags');
+				$tags.text("...");
+
+				getTagsForId(obj.yelp_obj.id, function(tags) {
+					if(!tags || tags.length == 0) {
+						$tags.text("No tags for : " + obj.yelp_obj.id);
+					} else {
+						$tags.text(tags.join(", "));
+					}
+				});
+
+				return false;
+			}
+
+			function updateTagsTest() {
+				var obj = test_data[0];
+
+				updateTags(obj, function(success) {
+
+					alert(success);
+
+				});
+
+			}
+
+
+			$(document).ready( function (){ 
+				$.getJSON('data_wrapper.json', function(data) {
+				test_data = data;
+
+				  var items = [];
+
+				  $.each(data, function(key, val) {
+				  	var tags = [];
+				    $.each(val.tags, function(k, v) {
+				    	tags.push(v);
+				    });
+
+				    items.push('<li> ' + val.yelp_obj.name + ': ' + tags.join(', ') + '</li>');
+
+				  });
+
+				  $('<ul/>', {
+				    html: items.join('')
+				  }).appendTo('#test-data');
+				});	
+
+
+
+			});
+
 			
+
 		</script>
 	</head>
 	<body>
@@ -61,6 +118,16 @@
 			<br/><br/>
 			<input type="text" id="input" style="font-size: 24pt;height: 30px;"/>
 			<div id="results" class="well">I'm a well.</div>
+
+			<div id="test-data">
+
+				<h2>Test Data</h2>
+			</div>
+			<br />
+			<br />
+			<a href="#" class="button" onclick="return getTagsForIdTest();">GetTags</a>
+			<a href="#" class="button" onclick="return updateTagsTest();">UpdateTags</a>
+			<div id="tags" class="well">I'm a well.</div>
 		</div>
 	</body>
 </html>
