--- a/fs-wrapper-tester.html
+++ b/fs-wrapper-tester.html
@@ -54,7 +54,7 @@
 			function getTagsForIdTest() {
 
 				var obj = test_data[0];
-				var $tags = $('#tags');
+				var $tags = $('#test-results');
 				$tags.text("...");
 
 				getTagsForId(obj.yelp_obj.id, function(tags) {
@@ -70,35 +70,51 @@
 
 			function updateTagsTest() {
 				var obj = test_data[0];
-
 				updateTags(obj, function(success) {
-
 					alert(success);
-
 				});
 
 			}
 
+			function getTaggedObjectsTest() {
+				getTaggedObjects(function(result) {
+					appendToBottom('#test-results', result);
+				});
+			}
 
-			$(document).ready( function (){ 
-				$.getJSON('data_wrapper.json', function(data) {
-				test_data = data;
+			function getTagsTest() {
+				getTags(function(tags) {
 
-				  var items = [];
+					$('#test-results').text("");
+					$('<ul/>', {
+					    html: tags.join(', ')
+					  }).appendTo('#test-results');
 
-				  $.each(data, function(key, val) {
+				});
+			}
+
+			function appendToBottom(selector,data) {
+				$(selector).text("");
+				var items = [];				
+				$.each(data, function(key, val) {
 				  	var tags = [];
 				    $.each(val.tags, function(k, v) {
 				    	tags.push(v);
 				    });
 
-				    items.push('<li> ' + val.yelp_obj.name + ': ' + tags.join(', ') + '</li>');
+			    items.push('<li> ' + val.yelp_obj.name + ': ' + tags.join(', ') + '</li>');
 
-				  });
+				});
 
-				  $('<ul/>', {
+				$('<ul/>', {
 				    html: items.join('')
-				  }).appendTo('#test-data');
+				  }).appendTo(selector);
+			}
+
+			$(document).ready( function (){ 
+				$.getJSON('data_wrapper.json', function(data) {
+					test_data = data;
+					appendToBottom('#test-data',data);
 				});	
 
 
@@ -125,9 +141,12 @@
 			</div>
 			<br />
 			<br />
-			<a href="#" class="button" onclick="return getTagsForIdTest();">GetTags</a>
+			<a href="#" class="button" onclick="return getTagsForIdTest();">GetTagsForId</a>
 			<a href="#" class="button" onclick="return updateTagsTest();">UpdateTags</a>
-			<div id="tags" class="well">I'm a well.</div>
+			<a href="#" class="button" onclick="return getTaggedObjectsTest();">GetTaggedObjs</a>
+			<a href="#" class="button" onclick="return getTagsTest();">GetTags</a>
+			<br/><br/>
+			<div id="test-results" class="well">I'm a well.</div>
 		</div>
 	</body>
 </html>
